ProFit/objects/Event__c.object
<CustomObject>
    <description>Events for Pro Fit App</description>
    <fields>
        <fullName>End_Date_Time__c</fullName>
        <description>Ending Date</description>
        <inlineHelpText>Ending Date</inlineHelpText>
        <label>End Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Location of the Event</description>
        <inlineHelpText>Location of the Event</inlineHelpText>
        <label>Event Location</label>
        <referenceTo>Event_Location__c</referenceTo>
        <relationshipLabel>Events</relationshipLabel>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Organizer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Event Organizer</description>
        <inlineHelpText>Event Organizer</inlineHelpText>
        <label>Event Organizer</label>
        <referenceTo>Event_Organizer__c</referenceTo>
        <relationshipLabel>Events</relationshipLabel>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <description>Type of Event</description>
        <inlineHelpText>Type of Event</inlineHelpText>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In-Person</fullName>
                </value>
                <value>
                    <fullName>Virtual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <description>Frequency of the Event</description>
        <inlineHelpText>Frequency of the Event</inlineHelpText>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Live__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Live?</description>
        <inlineHelpText>Live?</inlineHelpText>
        <label>Live?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location_Verified__c</fullName>
        <description>Is Location Verified</description>
        <formula>Event_Location__r.Verified__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Is Location Verified</inlineHelpText>
        <label>Location Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Max_Seat__c</fullName>
        <description>Maximum Occupancy</description>
        <inlineHelpText>Maximum Occupancy</inlineHelpText>
        <label>Max Seats</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Event Title</description>
        <inlineHelpText>Event Title</inlineHelpText>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>People_Attending__c</fullName>
        <description>Number of People Attending</description>
        <inlineHelpText>Number of People Attending</inlineHelpText>
        <label># People Attending</label>
        <summaryForeignKey>Event_Attendee__c.Event__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Recurring__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Recurring?</description>
        <inlineHelpText>Recurring?</inlineHelpText>
        <label>Recurring?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remaining_Seats__c</fullName>
        <description>Available Seats</description>
        <formula>Max_Seat__c -  People_Attending__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Available Seats</inlineHelpText>
        <label>Remaining Seats</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date_Time__c</fullName>
        <description>Starting Date</description>
        <inlineHelpText>Starting Date</inlineHelpText>
        <label>Start Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status_Indicator__c</fullName>
        <formula>IF( ISPICKVAL( Status__c , &apos;Deleted&apos;) , (IMAGE(&quot;https://www.pngitem.com/pimgs/m/508-5080910_red-flag-red-flag-waving-gif-hd-png.png&quot;,&quot;Red Flag&quot;, 48,48)),null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Event Status</description>
        <inlineHelpText>Event Status</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Postponed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Event</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Status__c</columns>
        <columns>Start_Date_Time__c</columns>
        <columns>End_Date_Time__c</columns>
        <columns>Event_Type__c</columns>
        <columns>Remaining_Seats__c</columns>
        <columns>Max_Seat__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>E-{0000}</displayFormat>
        <label>Event #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Events</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>End_Date_must_1_day_ahead_of_Start_Date</fullName>
        <active>true</active>
        <description>End Date/Time must be at-least 1 day ahead of Start Date/Time ( If there is a value in End Date/Time field )</description>
        <errorConditionFormula>AND(DATEVALUE( End_Date_Time__c )&lt;(DATEVALUE( Start_Date_Time__c )+1), NOT( ISNULL( End_Date_Time__c ) )   )</errorConditionFormula>
        <errorDisplayField>End_Date_Time__c</errorDisplayField>
        <errorMessage>End Date/Time must be at-least 1 day ahead of Start Date/Time</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Event_Type_In_Person</fullName>
        <active>true</active>
        <description>If Event Type field value is In-Person then user must need to select Location on Event Record.</description>
        <errorConditionFormula>AND( ISPICKVAL(  Event_Type__c  , &apos;In-person&apos;) ,   (ISBLANK( Event_Location__c  ) ) )</errorConditionFormula>
        <errorDisplayField>Event_Location__c</errorDisplayField>
        <errorMessage>If Event Type field value is In-Person then user must need to select Location on Event Record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Event_Type_Virtual</fullName>
        <active>true</active>
        <description>If Virtual is Selected as Value for Event Type field then Prevent User to Select Location on Event Record.</description>
        <errorConditionFormula>AND( ISPICKVAL(  Event_Type__c  , &apos;Virtual&apos;) ,   NOT(ISBLANK( Event_Location__c  ) ) )</errorConditionFormula>
        <errorDisplayField>Event_Location__c</errorDisplayField>
        <errorMessage>If Virtual is Selected as Value for Event Type field then Prevent User to Select Location on Event Record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Recurring_checked</fullName>
        <active>true</active>
        <description>If Recurring? checkbox is checked then user must need to fill Frequency field</description>
        <errorConditionFormula>AND( ISBLANK( TEXT( Frequency__c ) ), Recurring__c)</errorConditionFormula>
        <errorDisplayField>Frequency__c</errorDisplayField>
        <errorMessage>Recurring? checkbox is checked then user must need to fill Frequency field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Recurring_unchecked</fullName>
        <active>true</active>
        <description>Recurring? checkbox is unchecked then User can not select Frequency field</description>
        <errorConditionFormula>AND(  NOT(ISBLANK( TEXT( Frequency__c ))  ),  NOT(Recurring__c) )</errorConditionFormula>
        <errorDisplayField>Frequency__c</errorDisplayField>
        <errorMessage>Recurring? checkbox is unchecked then User can not select Frequency field</errorMessage>
    </validationRules>
</CustomObject>